Send objects to topic with json serialization.

--- a/test-kafka-producer-consumer/src/main/resources/application.properties
+++ b/test-kafka-producer-consumer/src/main/resources/application.properties
@@ -6,3 +6,10 @@ mp.messaging.outgoing.generated-price.value.serializer=org.apache.kafka.common.s
 # Configure the Kafka source (we read from it)
 mp.messaging.incoming.prices.connector=smallrye-kafka
 mp.messaging.incoming.prices.value.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
+
+# Transcriptions
+mp.messaging.outgoing.generated-transcription.connector=smallrye-kafka
+mp.messaging.outgoing.generated-transcription.topic=transcriptions
+mp.messaging.outgoing.generated-transcription.value.serializer=com.talkdesk.tdx.nlp.transcription.ObjectSerializer
+mp.messaging.incoming.transcriptions.connector=smallrye-kafka
+mp.messaging.incoming.transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionDeserializer
