--- a/test-kafka-producer-consumer/src/main/resources/application.properties
+++ b/test-kafka-producer-consumer/src/main/resources/application.properties
@@ -12,4 +12,4 @@ mp.messaging.outgoing.generated-transcription.connector=smallrye-kafka
 mp.messaging.outgoing.generated-transcription.topic=transcriptions
 mp.messaging.outgoing.generated-transcription.value.serializer=com.talkdesk.tdx.nlp.transcription.ObjectSerializer
 mp.messaging.incoming.transcriptions.connector=smallrye-kafka
-mp.messaging.incoming.transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionDeserializer
+mp.messaging.incoming.transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.ObjectDeserializer
