--- a/test-kafka-producer/src/main/resources/application.properties
+++ b/test-kafka-producer/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+KAFKA_SERVERS=localhost:9092
 mp.messaging.outgoing.generated-transcription.connector=smallrye-kafka
 mp.messaging.outgoing.generated-transcription.topic=transcriptions
+mp.messaging.outgoing.generated-transcription.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.outgoing.generated-transcription.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.generated-transcription.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
