--- a/test-kafka-consumer/src/main/resources/application.properties
+++ b/test-kafka-consumer/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+KAFKA_SERVERS=localhost:9092
 mp.messaging.incoming.transcriptions.connector=smallrye-kafka
+mp.messaging.incoming.transcriptions.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.incoming.transcriptions.group.id=group1
 mp.messaging.incoming.transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionDeserializer
