Add state topic

--- a/test-kafka-consumer/src/main/resources/application.properties
+++ b/test-kafka-consumer/src/main/resources/application.properties
@@ -3,3 +3,8 @@ mp.messaging.incoming.transcriptions.connector=smallrye-kafka
 mp.messaging.incoming.transcriptions.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.incoming.transcriptions.group.id=group1
 mp.messaging.incoming.transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionDeserializer
+
+mp.messaging.incoming.transcription-states.connector=smallrye-kafka
+mp.messaging.incoming.transcription-states.bootstrap.servers=${KAFKA_SERVERS}
+mp.messaging.incoming.transcription-states.group.id=group1
+mp.messaging.incoming.transcription-states.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionDeserializer
