--- a/test-kafka-producer/pom.xml
+++ b/test-kafka-producer/pom.xml
@@ -14,5 +14,10 @@
       <artifactId>test-kafka-dto</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
   </dependencies>
 </project>
