--- a/test-kafka-producer/src/main/resources/application.properties
+++ b/test-kafka-producer/src/main/resources/application.properties
@@ -4,3 +4,9 @@ mp.messaging.outgoing.generated-transcription.topic=transcriptions
 mp.messaging.outgoing.generated-transcription.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.outgoing.generated-transcription.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.generated-transcription.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+
+mp.messaging.outgoing.generated-transcription-state.connector=smallrye-kafka
+mp.messaging.outgoing.generated-transcription-state.topic=transcription-states
+mp.messaging.outgoing.generated-transcription-state.bootstrap.servers=${KAFKA_SERVERS}
+mp.messaging.outgoing.generated-transcription-state.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.generated-transcription-state.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
