--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.7'
 services:
   zoo1:
     # from https://github.com/simplesteph/kafka-stack-docker-compose/blob/master/zk-single-kafka-single.yml
@@ -48,11 +48,11 @@ services:
       KAFKA_SERVERS: ${DOCKER_HOST_IP:-127.0.0.1}:9092
     depends_on:
       - kafka1
+  # Note: a hostname must not be defined in order to create replicas with different hostnames
   kafka-consumer:
     build:
       context: ./test-kafka-consumer
       dockerfile: src/main/docker/Dockerfile.jvm
-    hostname: kafka-consumer
     image: test-kafka-consumer
     environment:
       KAFKA_SERVERS: ${DOCKER_HOST_IP:-127.0.0.1}:9092
