Send state back to the state topic.

--- a/test-kafka-consumer/src/main/resources/application.properties
+++ b/test-kafka-consumer/src/main/resources/application.properties
@@ -11,3 +11,9 @@ mp.messaging.incoming.transcription-states.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.incoming.transcription-states.group.id=group1
 mp.messaging.incoming.transcription-states.client.id=transcription-states-${HOSTNAME}
 mp.messaging.incoming.transcription-states.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionStateDeserializer
+
+mp.messaging.outgoing.generated-transcription-state.connector=smallrye-kafka
+mp.messaging.outgoing.generated-transcription-state.topic=transcription-states
+mp.messaging.outgoing.generated-transcription-state.bootstrap.servers=${KAFKA_SERVERS}
+mp.messaging.outgoing.generated-transcription-state.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.generated-transcription-state.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
