Working kafka streams state join, and some extras :P

--- a/test-kafka-consumer/src/main/resources/application.properties
+++ b/test-kafka-consumer/src/main/resources/application.properties
@@ -5,15 +5,19 @@ mp.messaging.incoming.transcriptions.group.id=group1
 mp.messaging.incoming.transcriptions.client.id=transcriptions-${HOSTNAME}
 mp.messaging.incoming.transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionDeserializer
 
-
 mp.messaging.incoming.transcription-states.connector=smallrye-kafka
 mp.messaging.incoming.transcription-states.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.incoming.transcription-states.group.id=group1
 mp.messaging.incoming.transcription-states.client.id=transcription-states-${HOSTNAME}
 mp.messaging.incoming.transcription-states.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionStateDeserializer
 
-mp.messaging.outgoing.generated-transcription-state.connector=smallrye-kafka
-mp.messaging.outgoing.generated-transcription-state.topic=transcription-states
-mp.messaging.outgoing.generated-transcription-state.bootstrap.servers=${KAFKA_SERVERS}
-mp.messaging.outgoing.generated-transcription-state.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.generated-transcription-state.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+mp.messaging.incoming.stateful-transcriptions.connector=smallrye-kafka
+mp.messaging.incoming.stateful-transcriptions.bootstrap.servers=${KAFKA_SERVERS}
+mp.messaging.incoming.stateful-transcriptions.group.id=group1
+mp.messaging.incoming.stateful-transcriptions.client.id=stateful-transcriptions-${HOSTNAME}
+mp.messaging.incoming.stateful-transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.StatefulTranscriptionDeserializer
+
+quarkus.kafka-streams.bootstrap-servers=${KAFKA_SERVERS}
+quarkus.kafka-streams.application-id=kafka-consumer
+quarkus.kafka-streams.application-server=${hostname}:8080
+quarkus.kafka-streams.topics=transcriptions,transcription-states,stateful-transcriptions
