--- a/test-kafka-consumer/pom.xml
+++ b/test-kafka-consumer/pom.xml
@@ -14,5 +14,9 @@
       <artifactId>test-kafka-dto</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-kafka-streams</artifactId>
+    </dependency>
   </dependencies>
 </project>
