--- a/test-kafka-consumer/src/main/resources/application.properties
+++ b/test-kafka-consumer/src/main/resources/application.properties
@@ -3,19 +3,19 @@ mp.messaging.incoming.transcriptions.connector=smallrye-kafka
 mp.messaging.incoming.transcriptions.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.incoming.transcriptions.group.id=group1
 mp.messaging.incoming.transcriptions.client.id=transcriptions-${HOSTNAME}
-mp.messaging.incoming.transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionDeserializer
+mp.messaging.incoming.transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.serialization.TranscriptionDeserializer
 
 mp.messaging.incoming.transcription-states.connector=smallrye-kafka
 mp.messaging.incoming.transcription-states.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.incoming.transcription-states.group.id=group1
 mp.messaging.incoming.transcription-states.client.id=transcription-states-${HOSTNAME}
-mp.messaging.incoming.transcription-states.value.deserializer=com.talkdesk.tdx.nlp.transcription.TranscriptionStateDeserializer
+mp.messaging.incoming.transcription-states.value.deserializer=com.talkdesk.tdx.nlp.transcription.serialization.TranscriptionStateDeserializer
 
 mp.messaging.incoming.stateful-transcriptions.connector=smallrye-kafka
 mp.messaging.incoming.stateful-transcriptions.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.incoming.stateful-transcriptions.group.id=group1
 mp.messaging.incoming.stateful-transcriptions.client.id=stateful-transcriptions-${HOSTNAME}
-mp.messaging.incoming.stateful-transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.StatefulTranscriptionDeserializer
+mp.messaging.incoming.stateful-transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.serialization.StatefulTranscriptionDeserializer
 
 quarkus.kafka-streams.bootstrap-servers=${KAFKA_SERVERS}
 quarkus.kafka-streams.application-id=kafka-consumer
