--- a/test-kafka-consumer/pom.xml
+++ b/test-kafka-consumer/pom.xml
@@ -18,5 +18,9 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-kafka-streams</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-health</artifactId>
+    </dependency>
   </dependencies>
 </project>
