Improve topic configuration.

--- a/test-kafka-consumer/src/main/resources/application.properties
+++ b/test-kafka-consumer/src/main/resources/application.properties
@@ -17,11 +17,11 @@ mp.messaging.incoming.stateful-transcriptions.group.id=group1
 mp.messaging.incoming.stateful-transcriptions.client.id=stateful-transcriptions-${HOSTNAME}
 mp.messaging.incoming.stateful-transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.serialization.StatefulTranscriptionDeserializer
 
-mp.messaging.outgoing.generated-transcription-state.connector=smallrye-kafka
-mp.messaging.outgoing.generated-transcription-state.topic=transcription-states
-mp.messaging.outgoing.generated-transcription-state.bootstrap.servers=${KAFKA_SERVERS}
-mp.messaging.outgoing.generated-transcription-state.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.generated-transcription-state.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+mp.messaging.outgoing.transcription-states.connector=smallrye-kafka
+mp.messaging.outgoing.transcription-states.topic=transcription-states
+mp.messaging.outgoing.transcription-states.bootstrap.servers=${KAFKA_SERVERS}
+mp.messaging.outgoing.transcription-states.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.transcription-states.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 
 quarkus.kafka-streams.bootstrap-servers=${KAFKA_SERVERS}
 quarkus.kafka-streams.application-id=kafka-consumer
