--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
     environment:
       KAFKA_SERVERS: ${DOCKER_HOST_IP:-127.0.0.1}:9092
     ports:
-      - "8080:8080"
+      # Allow dynamic ports when running multiple instances with scale
+      - "8080-8084:8080"
     depends_on:
       - kafka1
