--- a/test-kafka-consumer/src/main/resources/application.properties
+++ b/test-kafka-consumer/src/main/resources/application.properties
@@ -12,13 +12,21 @@ mp.messaging.incoming.transcription-states.client.id=transcription-states-${HOST
 mp.messaging.incoming.transcription-states.value.deserializer=com.talkdesk.tdx.nlp.transcription.serialization.TranscriptionStateDeserializer
 
 mp.messaging.incoming.stateful-transcriptions.connector=smallrye-kafka
+mp.messaging.incoming.stateful-transcriptions.topic=stateful-transcriptions
 mp.messaging.incoming.stateful-transcriptions.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.incoming.stateful-transcriptions.group.id=group1
 mp.messaging.incoming.stateful-transcriptions.client.id=stateful-transcriptions-${HOSTNAME}
 mp.messaging.incoming.stateful-transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.serialization.StatefulTranscriptionDeserializer
 
+mp.messaging.incoming.resource-stateful-transcriptions.connector=smallrye-kafka
+mp.messaging.incoming.resource-stateful-transcriptions.topic=stateful-transcriptions
+mp.messaging.incoming.resource-stateful-transcriptions.bootstrap.servers=${KAFKA_SERVERS}
+mp.messaging.incoming.resource-stateful-transcriptions.group.id=group2
+mp.messaging.incoming.resource-stateful-transcriptions.client.id=resource-stateful-transcriptions-${HOSTNAME}
+mp.messaging.incoming.resource-stateful-transcriptions.value.deserializer=com.talkdesk.tdx.nlp.transcription.serialization.StatefulTranscriptionDeserializer
+
 mp.messaging.outgoing.transcription-states.connector=smallrye-kafka
-mp.messaging.outgoing.transcription-states.topic=transcription-states
+c
 mp.messaging.outgoing.transcription-states.bootstrap.servers=${KAFKA_SERVERS}
 mp.messaging.outgoing.transcription-states.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.transcription-states.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
