--- a/test-kafka-consumer/src/main/resources/application.properties
+++ b/test-kafka-consumer/src/main/resources/application.properties
@@ -35,3 +35,10 @@ quarkus.kafka-streams.bootstrap-servers=${KAFKA_SERVERS}
 quarkus.kafka-streams.application-id=kafka-consumer
 quarkus.kafka-streams.application-server=${hostname}:8080
 quarkus.kafka-streams.topics=transcriptions,transcription-states,stateful-transcriptions
+
+%dev.quarkus.kafka-streams.application-server=localhost:8080
+%dev.mp.messaging.incoming.transcriptions.client.id=consumer-1
+%dev.mp.messaging.incoming.transcription-states.client.id=consumer-1
+%dev.mp.messaging.incoming.stateful-transcriptions.client.id=consumer-1
+%dev.mp.messaging.incoming.resource-stateful-transcriptions.client.id=consumer-1
+
