Get fixed intervals from environmente variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     environment:
       KAFKA_SERVERS: ${DOCKER_HOST_IP:-127.0.0.1}:9092
       # Message generation interval in milliseconds
-      INTERVAL: ${INTERVAL:-1000}
+      GENERATION: ${GENERATION_INTERVAL:-1000}
     depends_on:
       - kafka1
   # Note: a hostname must not be defined in order to create replicas with different hostnames
@@ -58,6 +58,10 @@ services:
     image: test-kafka-consumer
     environment:
       KAFKA_SERVERS: ${DOCKER_HOST_IP:-127.0.0.1}:9092
+      # Message processing interval in milliseconds
+      PROCESSING_INTERVAL: ${PROCESSING_INTERVAL:-0}
+      # Sliding window for join in milliseconds
+      JOIN_INTERVAL: ${JOIN_INTERVAL:-5000}
     ports:
       # Allows dynamic ports when running multiple instances with scale
       # Scales up to four containers
